Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2986

Incorrect value for the 'live_row_count' metric with pre-1.11.0 tables

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.11.0
    • 1.12.0
    • CLI, client, master, metrics
    • None

    Description

      When we upgraded the cluster with pre-1.11.0 tables, we got inconsistent values for the 'live_row_count' metric of these tables:

      When visiting masterURL:port/metrics, we got 0 for old tables, and got a positive integer for a old table with a newly added partition, which is the count of rows in the newly added partition.

      When gettingĀ table statistics via `kudu table statistics` CLI tool, we got 0 for old tables and the old table with a new parition.

      Attachments

        Activity

          People

            helifu LiFu He
            zhangyifan27 YifanZhang
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: