KUDU-2986 p1: adjust the kudu CLI output from 0 to N/A

The `live_row_count` metric value should be invalid(N/A) in
kudu CLI output("kudu table statistics") while there is any
tablet which doesn't support live row count.

Change-Id: I82c47f5ac07cf63d455c0720614c5383bfa88ca3
Reviewed-on: http://gerrit.cloudera.org:8080/14567
Tested-by: Kudu Jenkins
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>